fix(SegmentTimeline): Pieces may be rendered incorrectly, if cropped, but they have an overflow counter

--- a/meteor/client/styles/rundownView.scss
+++ b/meteor/client/styles/rundownView.scss
@@ -2279,7 +2279,7 @@ svg.icon {
 				}
 			}
 
-			.segment-timeline__piece:not(.infinite) .segment-timeline__piece__label.right-side {
+			.segment-timeline__piece:not(.infinite) > .segment-timeline__piece__label.right-side {
 				background: inherit;
 			}
 
